src/antlr4_generated/SmallCParser.py
# Generated from SmallC.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO



class SmallCParser ( Parser ):

    grammarFileName = "SmallC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'?'", "':'", "'||'", "'&&'", "'=='", 
                     "'!='", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'++'", "'--'", "'&'", "'!'", "';'", "'#include'", 
                     "'.'", "','", "'('", "')'", "'<'", "'>'", "'{'", "'}'", 
                     "'['", "']'", "'\"'", "'char'", "'float'", "'int'", 
                     "'void'", "'const'", "'volatile'", "'mutable'", "'if'", 
                     "'else'", "'do'", "'while'", "'for'", "'break'", "'continue'", 
                     "'return'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "COMMA", "LBRA", "RBRA", 
                      "LABRA", "RABRA", "LCBRA", "RCBRA", "LSBRA", "RSBRA", 
                      "QUOTE", "TYPECHAR", "TYPEFLOAT", "TYPEINT", "TYPEVOID", 
                      "CONST", "VOLATILE", "MUTABLE", "IF", "ELSE", "DO", 
                      "WHILE", "FOR", "BREAK", "CONTINUE", "RETURN", "COMMENT", 
                      "MULTICOMMENT", "INTEGER", "FLOAT", "IDENTIFIER", 
                      "CHARACTER", "STRING", "WS" ]

    RULE_oplevel15 = 0
    RULE_oplevel14 = 1
    RULE_oplevel13 = 2
    RULE_oplevel12 = 3
    RULE_oplevel11 = 4
    RULE_oplevel10 = 5
    RULE_oplevel9 = 6
    RULE_oplevel8 = 7
    RULE_oplevel7 = 8
    RULE_oplevel6 = 9
    RULE_oplevel5 = 10
    RULE_oplevel4 = 11
    RULE_oplevel3 = 12
    RULE_oplevel2 = 13
    RULE_oplevel1 = 14
    RULE_program = 15
    RULE_include = 16
    RULE_stdInclude = 17
    RULE_customInclude = 18
    RULE_functionDeclaration = 19
    RULE_functionDefinition = 20
    RULE_parameters = 21
    RULE_parameter = 22
    RULE_pointerPart = 23
    RULE_arrayPart = 24
    RULE_statements = 25
    RULE_statement = 26
    RULE_expression = 27
    RULE_ifCond = 28
    RULE_elseCond = 29
    RULE_whileCond = 30
    RULE_doWhileCond = 31
    RULE_forLoop = 32
    RULE_variableDeclaration = 33
    RULE_declarationSpecifier = 34
    RULE_cvQualifier = 35
    RULE_declaratorInitializer = 36
    RULE_declarator1 = 37
    RULE_declarator2 = 38
    RULE_initializer = 39
    RULE_returnStmt = 40
    RULE_arguments = 41
    RULE_functionCall = 42
    RULE_variable = 43
    RULE_identifier = 44
    RULE_pointer = 45
    RULE_typeDeclaration = 46
    RULE_floatLiteral = 47
    RULE_integerLiteral = 48
    RULE_characterLiteral = 49
    RULE_stringLiteral = 50

    ruleNames =  [ "oplevel15", "oplevel14", "oplevel13", "oplevel12", "oplevel11", 
                   "oplevel10", "oplevel9", "oplevel8", "oplevel7", "oplevel6", 
                   "oplevel5", "oplevel4", "oplevel3", "oplevel2", "oplevel1", 
                   "program", "include", "stdInclude", "customInclude", 
                   "functionDeclaration", "functionDefinition", "parameters", 
                   "parameter", "pointerPart", "arrayPart", "statements", 
                   "statement", "expression", "ifCond", "elseCond", "whileCond", 
                   "doWhileCond", "forLoop", "variableDeclaration", "declarationSpecifier", 
                   "cvQualifier", "declaratorInitializer", "declarator1", 
                   "declarator2", "initializer", "returnStmt", "arguments", 
                   "functionCall", "variable", "identifier", "pointer", 
                   "typeDeclaration", "floatLiteral", "integerLiteral", 
                   "characterLiteral", "stringLiteral" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    COMMA=22
    LBRA=23
    RBRA=24
    LABRA=25
    RABRA=26
    LCBRA=27
    RCBRA=28
    LSBRA=29
    RSBRA=30
    QUOTE=31
    TYPECHAR=32
    TYPEFLOAT=33
    TYPEINT=34
    TYPEVOID=35
    CONST=36
    VOLATILE=37
    MUTABLE=38
    IF=39
    ELSE=40
    DO=41
    WHILE=42
    FOR=43
    BREAK=44
    CONTINUE=45
    RETURN=46
    COMMENT=47
    MULTICOMMENT=48
    INTEGER=49
    FLOAT=50
    IDENTIFIER=51
    CHARACTER=52
    STRING=53
    WS=54

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Oplevel15Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel14(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel14Context,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_oplevel15

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel15" ):
                listener.enterOplevel15(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel15" ):
                listener.exitOplevel15(self)




    def oplevel15(self):

        localctx = SmallCParser.Oplevel15Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_oplevel15)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.oplevel14()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Oplevel14Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel13(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel13Context,0)


        def oplevel14(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel14Context,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_oplevel14

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel14" ):
                listener.enterOplevel14(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel14" ):
                listener.exitOplevel14(self)




    def oplevel14(self):

        localctx = SmallCParser.Oplevel14Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_oplevel14)
        try:
            self.state = 109
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.oplevel13()
                self.state = 105
                self.match(SmallCParser.T__0)
                self.state = 106
                self.oplevel14()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.oplevel13()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Oplevel13Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel12(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SmallCParser.Oplevel12Context)
            else:
                return self.getTypedRuleContext(SmallCParser.Oplevel12Context,i)


        def oplevel13(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel13Context,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_oplevel13

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel13" ):
                listener.enterOplevel13(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel13" ):
                listener.exitOplevel13(self)




    def oplevel13(self):

        localctx = SmallCParser.Oplevel13Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_oplevel13)
        try:
            self.state = 118
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.oplevel12(0)
                self.state = 112
                self.match(SmallCParser.T__1)
                self.state = 113
                self.oplevel12(0)
                self.state = 114
                self.match(SmallCParser.T__2)
                self.state = 115
                self.oplevel13()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.oplevel12(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Oplevel12Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel11(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel11Context,0)


        def oplevel12(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel12Context,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_oplevel12

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel12" ):
                listener.enterOplevel12(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel12" ):
                listener.exitOplevel12(self)



    def oplevel12(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SmallCParser.Oplevel12Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_oplevel12, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.oplevel11(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SmallCParser.Oplevel12Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel12)
                    self.state = 123
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 124
                    self.match(SmallCParser.T__3)
                    self.state = 125
                    self.oplevel11(0) 
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Oplevel11Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel7(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel7Context,0)


        def oplevel11(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel11Context,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_oplevel11

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel11" ):
                listener.enterOplevel11(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel11" ):
                listener.exitOplevel11(self)



    def oplevel11(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SmallCParser.Oplevel11Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_oplevel11, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.oplevel7(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 139
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SmallCParser.Oplevel11Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel11)
                    self.state = 134
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 135
                    self.match(SmallCParser.T__4)
                    self.state = 136
                    self.oplevel7(0) 
                self.state = 141
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Oplevel10Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel9(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel9Context,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_oplevel10

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel10" ):
                listener.enterOplevel10(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel10" ):
                listener.exitOplevel10(self)




    def oplevel10(self):

        localctx = SmallCParser.Oplevel10Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_oplevel10)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.oplevel9()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Oplevel9Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel8(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel8Context,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_oplevel9

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel9" ):
                listener.enterOplevel9(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel9" ):
                listener.exitOplevel9(self)




    def oplevel9(self):

        localctx = SmallCParser.Oplevel9Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_oplevel9)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.oplevel8()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Oplevel8Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel7(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel7Context,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_oplevel8

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel8" ):
                listener.enterOplevel8(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel8" ):
                listener.exitOplevel8(self)




    def oplevel8(self):

        localctx = SmallCParser.Oplevel8Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_oplevel8)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.oplevel7(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Oplevel7Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel6(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel6Context,0)


        def oplevel7(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel7Context,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_oplevel7

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel7" ):
                listener.enterOplevel7(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel7" ):
                listener.exitOplevel7(self)



    def oplevel7(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SmallCParser.Oplevel7Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_oplevel7, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.oplevel6(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 159
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 157
                    self._errHandler.sync(self);
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = SmallCParser.Oplevel7Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel7)
                        self.state = 151
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 152
                        self.match(SmallCParser.T__5)
                        self.state = 153
                        self.oplevel6(0)
                        pass

                    elif la_ == 2:
                        localctx = SmallCParser.Oplevel7Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel7)
                        self.state = 154
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 155
                        self.match(SmallCParser.T__6)
                        self.state = 156
                        self.oplevel6(0)
                        pass

             
                self.state = 161
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Oplevel6Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel4(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel4Context,0)


        def oplevel6(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel6Context,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_oplevel6

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel6" ):
                listener.enterOplevel6(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel6" ):
                listener.exitOplevel6(self)



    def oplevel6(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SmallCParser.Oplevel6Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_oplevel6, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.oplevel4(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 179
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 177
                    self._errHandler.sync(self);
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = SmallCParser.Oplevel6Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel6)
                        self.state = 165
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 166
                        self.match(SmallCParser.LABRA)
                        self.state = 167
                        self.oplevel4(0)
                        pass

                    elif la_ == 2:
                        localctx = SmallCParser.Oplevel6Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel6)
                        self.state = 168
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 169
                        self.match(SmallCParser.T__7)
                        self.state = 170
                        self.oplevel4(0)
                        pass

                    elif la_ == 3:
                        localctx = SmallCParser.Oplevel6Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel6)
                        self.state = 171
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 172
                        self.match(SmallCParser.RABRA)
                        self.state = 173
                        self.oplevel4(0)
                        pass

                    elif la_ == 4:
                        localctx = SmallCParser.Oplevel6Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel6)
                        self.state = 174
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 175
                        self.match(SmallCParser.T__8)
                        self.state = 176
                        self.oplevel4(0)
                        pass

             
                self.state = 181
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Oplevel5Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel4(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel4Context,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_oplevel5

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel5" ):
                listener.enterOplevel5(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel5" ):
                listener.exitOplevel5(self)




    def oplevel5(self):

        localctx = SmallCParser.Oplevel5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_oplevel5)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.oplevel4(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Oplevel4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel3(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel3Context,0)


        def oplevel4(self):
            return self.getTypedRuleContext(SmallCParser.Oplevel4Context,0)


        def getRuleIndex(self):
            return SmallCParser.RULE_oplevel4

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel4" ):
                listener.enterOplevel4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel4" ):
                listener.exitOplevel4(self)


